--- a/fix.html
+++ b/fix.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sayang Kamu 💜</title>
+  <title>Sayangkuuu 💜</title>
   <style>
     body {
       margin: 0;
